# PDF-Layout-Translator

./: .env.example  .gitignore  README.md  docker-compose.yaml  pyproject.toml
app/: celery_app.py  main.py
app/configs/: language_config.py
app/routers/: pdf_router.py
app/services/: pdf_service.py
app/tasks/: pdf_task.py
backend/: .dockerignore  .env.example  Dockerfile  docker-compose.yaml
backend/app/: main.py
backend/app/configs/: app_config.py  font_config.py
backend/app/routers/: pdf_router.py
backend/app/services/: pdf_service.py
backend/app/utils/: redis_cache.py  translator.py
frontend/: font_config.py  language_config.py  main.py  pyproject.toml
